fix vertical scroll on mobile

--- a/style.css
+++ b/style.css
@@ -63,6 +63,10 @@ body::-webkit-scrollbar {
     width: 120px;
     margin-right: 7px;
   }
+
+  .header {
+    padding: 0px
+  }
   
 }
 
